--- a/definitions/rgw.yaml
+++ b/definitions/rgw.yaml
@@ -2,6 +2,7 @@
 # Here we define the parameter which are the same when using
 # the database from Gerry for the different variants/varsions and licenses
   :db_dump: /opt/db_dumps/rgw_1.8.6.sql
+  :db_label: rgw
   :elexis_user: test
   :elexis_password: test
   :jdbc: mysql://elexis:elexisTest@localhost/test_elexis
