--- a/wheezy/docker-compose.yml
+++ b/wheezy/docker-compose.yml
@@ -29,8 +29,7 @@ services:
       MYSQL_DATABASE: elexistest
 
   pgdata:
-    image: postgres:9.1
-    entrypoint: /bin/bash
+    image: busybox
     networks:
       private:
 
@@ -40,12 +39,13 @@ services:
       private:
     volumes_from:
       - pgdata
-    volumes:
-      - ${PWD}/wheezy/postgres:/docker-entrypoint-initdb.d
+#    volumes:
+#      - ${PWD}/wheezy/postgres:/docker-entrypoint-initdb.d
     environment:
       # LANG: 'de_CH.UTF-8'
       PGUSER: elexistest
       POSTGRES_DB: elexistest
+      POSTGRES_USER: elexistest
       POSTGRES_PASSWORD: elexisTestPassword
 
   jenkinstest:
@@ -85,6 +85,9 @@ services:
       PGHOST: postgres
       POSTGRES_DB: elexistest
       POSTGRES_PASSWORD: elexisTestPassword
+      PGUSER: elexistest
+      PGPASSWORD: elexisTestPassword
+      
       MYSQL_HOST: mysql
       MYSQL_ROOT_PASSWORD: secretRoot
       MYSQL_USER: elexistest
